<resources>
    <string name="app_name">MobileComputingProject</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_lend">Lend keys</string>
    <string name="title_receive">Receive keys</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lend_new_key">+ Lend new key</string>
    <string name="lended_keys">Lended keys</string>
    <string name="received_keys">Received keys</string>
    <string name="your_information">Your information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="your_keys">Your keys</string>
    <string name="save_changes">Save changes</string>
    <string name="select_key">Select key</string>
    <string name="add_key">+ Add key</string>
    <string name="edit">Edit</string>
    <string name="address_other_info"><![CDATA[Address & other info]]></string>
    <string name="add_new_key">Add new key</string>
    <string name="key_name">Key name</string>
    <string name="address_or_position">Address or position</string>
    <string name="zip_code">ZIP code</string>
    <string name="city">City</string>
    <string name="select_image">Select image</string>
    <string name="comment">Comment</string>
    <string name="send_key">Send key</string>
    <string name="search_user">Search user</string>
    <string name="timespan">Timespan</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="my_keys">My keys</string>
    <string name="key_chain">Keychain</string>
    <string name="edit_key">Edit key</string>
    <string name="change_key">Change key</string>
</resources>