<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.EditFragment">

    <TextView
        android:id="@+id/editKeyHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit_key"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editKeyName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/key_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editKeyHeader" />

    <EditText
        android:id="@+id/editKeyAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/address_or_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editKeyName"/>

    <EditText
        android:id="@+id/editKeyZip"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/zip_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editKeyCity"
        app:layout_constraintTop_toBottomOf="@id/editKeyAddress"/>

    <EditText
        android:id="@+id/editKeyCity"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/city"
        app:layout_constraintStart_toEndOf="@id/editKeyZip"
        app:layout_constraintTop_toBottomOf="@id/editKeyAddress"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/edit_choose_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose key"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="271dp"
        android:textSize="16sp"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_select_key_button"
        app:layout_constraintTop_toBottomOf="@id/editKeyCity"/>


    <Button
        android:id="@+id/edit_select_key_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/change_key"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/edit_choose_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editKeyCity"/>

    <Button
        android:id="@+id/save_key_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/save_changes"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_select_key_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>