<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddFragment">

    <TextView
        android:id="@+id/newKeyHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_new_key"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextKeyName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/key_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newKeyHeader" />

    <EditText
        android:id="@+id/editTextKeyAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/address_or_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextKeyName"/>

    <EditText
        android:id="@+id/editTextKeyZip"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/zip_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editTextKeyCity"
        app:layout_constraintTop_toBottomOf="@id/editTextKeyAddress"/>

    <EditText
        android:id="@+id/editTextKeyCity"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/city"
        app:layout_constraintStart_toEndOf="@id/editTextKeyZip"
        app:layout_constraintTop_toBottomOf="@id/editTextKeyAddress"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/imageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose key"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="271dp"
        android:textSize="16sp"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/select_key_button"
        app:layout_constraintTop_toBottomOf="@id/editTextKeyCity"/>


    <Button
        android:id="@+id/select_key_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="Select key to add"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/imageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextKeyCity"/>

    <Button
        android:id="@+id/add_key_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/add_key"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_key_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>