<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_lend">

    <fragment
        android:id="@+id/navigation_lend"
        android:name="com.example.mobilecomputingproject.ui.lend.LendFragment"
        android:label="@string/title_lend"
        tools:layout="@layout/fragment_lend">
        <action
            android:id="@+id/action_navigation_home_to_chooseFragment"
            app:destination="@id/chooseFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_receive"
        android:name="com.example.mobilecomputingproject.ui.receive.ReceiveFragment"
        android:label="@string/title_receive"
        tools:layout="@layout/fragment_receive" />

    <fragment
        android:id="@+id/navigation_mykeys"
        android:name="com.example.mobilecomputingproject.ui.mykeys.MyKeysFragment"
        android:label="@string/my_keys"
        tools:layout="@layout/fragment_mykeys" >
        <action
            android:id="@+id/action_navigation_notifications_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_navigation_mykeys_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.mobilecomputingproject.AddFragment"
        android:label="Lend keys"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_navigation_notifications"
            app:destination="@id/navigation_mykeys" />
    </fragment>
    <fragment
        android:id="@+id/chooseFragment"
        android:name="com.example.mobilecomputingproject.ui.select.ChooseFragment"
        android:label="Lend keys"
        tools:layout="@layout/fragment_select" >
        <action
            android:id="@+id/action_chooseFragment_to_sendFragment"
            app:destination="@id/sendFragment" />
    </fragment>
    <fragment
        android:id="@+id/sendFragment"
        android:name="com.example.mobilecomputingproject.SendFragment"
        android:label="Lend keys"
        tools:layout="@layout/fragment_send" >
        <action
            android:id="@+id/action_sendFragment_to_navigation_home"
            app:destination="@id/navigation_lend" />
        <argument
            android:name="keyName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="com.example.mobilecomputingproject.EditFragment"
        android:label="fragment_edit"
        tools:layout="@layout/fragment_edit" >
        <action
            android:id="@+id/action_editFragment_to_navigation_mykeys"
            app:destination="@id/navigation_mykeys" />
    </fragment>
</navigation>